# ftc_tp2

./: CMakeLists.txt  apd.cpp  apd.h  aritmetica.apd  arquivoapd.cpp  arquivoapd.h  caso1.apd  caso2.apd  caso3.apd  entrada.apd  estado.cpp  estado.h  executarTestes.bat  executarTestes.sh  main.cpp  palavra.cpp  palavra.h  pilha.cpp  pilha.h  simbolo.cpp  simbolo.h  transicao.cpp  transicao.h
